Just found out that each 2 digits of Hexadecimal colour notation stands for diffrent colour according to rgb notation

--- a/style.css
+++ b/style.css
@@ -35,6 +35,8 @@ body {
 #logoBar {
     width: 100%;
     height: 100px;
+    font-weight: 600;
+    color: #4b4b4b;
     display: inline-flex;
     align-items: center;
     justify-content: space-between;
