--- a/style.css
+++ b/style.css
@@ -6,6 +6,10 @@ body {
     margin: 0;
 }
 
+a {
+  text-decoration: none;
+}
+
 /* ===== Main Bar ===== */
 .topBarContent {
     margin: auto;
@@ -23,6 +27,7 @@ body {
 }
 
 .infoBar, .infoBar > ul {
+    font-size: 0.9em;
     display: inline-flex;
     list-style-type: none;
     background-color: rgb(32, 32, 32);
@@ -66,8 +71,16 @@ body {
 }
 
 .location {
-  display: flex;
+  height: 35px;
+  display: inline-flex;
   align-items: center;
+}
+
+.location  a, .location i {
+  text-decoration: none;
+  color: grey;
+  font-size: 0.9em;
+  margin-right: 10px;
 }
 
 .menuToggle {
@@ -140,7 +153,8 @@ form.searchBar::after {
     z-index: 1;
   }
 
-  /* Links inside the dropdown */
+  /* Links insi
+  ,-+de the dropdown */
   .dropdown-content a {
     font-weight: 600;
     color: grey;
@@ -172,81 +186,229 @@ form.searchBar::after {
 
 .mainProduct {
   display: inline-flex;
-  flex-direction: row;
   width: 100%;
-  height: 400px;
 }
 
-.productPhoto {
-  width: 55%;
-  border: 1px solid black;
+.productPhotoContainer {
+  width: 50%;
+}
+
+.product-photo {
+  margin: 0;
+  padding: 0;
+  width: 100%;
 }
 
 .productOptions{
-  width: 45%;
-  border: 1px solid black;
+  width: 50%;
 }
 
-.productSuggestions {
-  border: 1px solid black;
-  width: 100%;
-  height: auto;
+.options-info {
+  display: flex;
+  justify-content: left;
+  font-size: 0.9em;
 }
 
-.additionalProducts {
+.producer, .producer a {
+  margin-right: 10px;
+  text-decoration: none;
+}
+
+.product-status-shipping {
+  display: inline-flex;
+  align-items: center;
+  width: 100%
+}
+
+.product-status {
+  display: inline-flex;
+  align-items: center;
+  font-size: 0.8em;
+  width: 50%;
+  margin: 20px 0 20px 0;
+}
+
+.product-status-text {
+  display: inline-flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  margin: 0 5px 0 5px;
+}
+
+.product-shipping-info {
+  width: 50%;
+}
+
+.product-shipping-info a {
+  display: flex;
+  float: right;
+  margin-right: 1vw;
+  flex-wrap: wrap;
+  font-size: 0.8em;
+  text-decoration: none;
+  font-weight: 600;
+  color: rgb(138, 68, 79);
+}
+
+.product-status img {
+  display: flex;
+  float: left;
+  align-self: center;
+}
+
+
+.product-price-container {
+ display: inline-flex;
+ margin-top: 20px;
+ justify-content: space-between;
+}
+
+.price {
+  display: inline-flex;
+  flex-direction: column;
+}
+
+.old-price {
+  font-size: 0.8em;
+  color: grey;
+  text-decoration: line-through;
+}
+
+.new-price {
+  font-size: 1.5em;
+  font-weight: 600;
+}
+
+
+
+.quantity {
   display: inline-flex;
   justify-content: center;
-  width: 100%;
-  height: 150px;
-  border: 1px solid black;
+  border: 1px solid lightgrey;
+  width: 20%;
+  box-sizing: border-box;
 }
 
-.product {
-  border: 1px solid blue;
+.quantity-btn {
+  cursor: pointer;
+  background-color: rgba(0, 0, 0, 0);
+  border: none;
   width: 33%;
+}
+
+.quantity-number {
+  text-align: center;
+  border: none;
+  width: 33%;
+  background-color: rgba(0, 0, 0, 0);
+}
+
+.add-basket-btn {
+  text-transform: uppercase;
+  background-color: rgba(0, 0, 0, 0);
+  border: 0px;
+  cursor: pointer;
+  color: white;
+  font-weight: 600;
+  padding: 20px;
+  background: #b62323 url(./graphics/bg-buttons.png);
+}
+
+.product-title {
+  font-size: 1.5em;
+  font-weight: bold;
+  color: #333333;
+  margin: 0;
+  margin-bottom: 0px;
+  line-height: 1.1em;
+  display: inline-block;
+  vertical-align: middle;
+  margin-top: 10px;
+  margin-bottom: 13px;
+}
+
+.negotiate-price {
+  display: inline-flex;
+  align-items: center;
+  width: 100%;
+  margin-top: 20px;
+}
+
+.negotiate-img {
+  width: auto;
+  margin-right: 10px;
+}
+
+.negotiate-price-text {
+  display: flex;
+  flex-direction: column;
+  width: auto;
+
+}
+
+.text-highlighted {
+  font-size: 0.8em;
+  font-weight: 600;
+  color: #b62323;
+}
+
+.negotiate-img {
+  float: left;
 }
 
 /* Mid page */
 .midPage {
   display: inline-flex;
   width: 100%;
-  height: 600px;
-  border: 1px solid black;
 }
 
 .midPageLeft {
   width: 60%;
-  border: 1px solid blue;
+}
+
+.midPageLeft p {
+  font-weight: 600;
+  font-size: 0.9em;
+  color: grey;
+  line-height: 1.4em;
 }
 
 .midPageRight{
+  display: flex;
   width: 40%;
-  border: 1px solid red;
+  justify-content: center;
+  align-items: center;
+  align-self: center;
 }
 
-/* Lower page */
-.lowerPage {
-  display: block;
-  width: 100%;
-  border: 1px solid black;
+.banner {
+  display: flex;
+  flex-direction: column;
+  box-shadow: 0px 13px 36px -10px rgba(0,0,0,0.75);
+  font-weight: 600;
+  font-size: 0.8em;
+  padding-bottom: 15px;
 }
 
-.articlesContainer {
-  display: inline-flex;
-  width: 100%;
-  height: 200px;
+.banner p {
+  line-height: 0;
+  margin-left: 15px;
+  margin-top: 5px;
 }
 
-.articlesContainer .article {
-  width: 50%;
-  border: 1px solid black;
+.banner h3 {
+  font-size: 0.95em;
+  color: grey;
+  margin-bottom: 6px;
+  margin-left: 15px;
 }
-
-/* ===== Footer  ===== */
 
 .footer {
-  border: 1px solid black;
-  height: 200px;
+  margin-top: 100px;
+}
+
+.footer, .footer img {
+  width: 100%;
 }
 
   /* Media Queries */
@@ -257,8 +419,35 @@ form.searchBar::after {
     .infoBar {
       display: none;
     }
+
+    .menu-text {
+      display: none;
+    }
+
+    .cart a{
+      float: right;
+      padding: 10px;
+      background: lightgrey;
+      color: grey;
+      border-radius: 5px;
+      font-size: 1.5em;
+      margin: 5px;
+    }
+
+    .account a{
+      display: block;
+      padding: 10px;
+      background: lightgrey;
+      color: grey;
+      border-radius: 5px;
+      font-size: 1.5em;
+      margin: 5px;
+    }
+
     .logoBar {
       height: auto;
+      width: 100%;
+      margin: 0;
       justify-content: space-between;
       display: flex;
       flex-wrap: wrap;
@@ -267,21 +456,22 @@ form.searchBar::after {
     .logo-full {
       display: none;
     }
+    
     .logo-mobile {
       display: flex;
       height: 80px;
       width: auto;
     }
 
-    form.searchBar input {
+    .searchBar input {
       display: none;
     }
 
-    form.searchBar .searchButton {
+    .searchBar .searchButton {
       display: none;
     }
 
-    form.searchBar .showButton {
+    .searchBar .showButton {
       display: block;
     }
 
@@ -308,7 +498,8 @@ form.searchBar::after {
 
     .menuToggle {
       display: block;
-      padding: 5px;
+      padding: 10px;
+      margin-right: 10px;
       background: lightgrey;
       color: grey;
       border-radius: 5px;
@@ -316,18 +507,38 @@ form.searchBar::after {
 
 
     /*  == Page Content  == */
-    .mainProduct {
-      display: block;
+    .page {
+      width: 90vw;
+      margin: auto;
     }
 
-    .productPhoto {
-      width: 100vw;
+    .mainProduct {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
+
+    .productPhotoContainer {
+      width: 70vw;
     }
 
     .productOptions {
-      width: 100vw;
+      width: 100%;
     }
 
+    .midPage {
+      display: block;
+      width: 100%;
+    }
+    
+    .midPageLeft {
+      width: 100%;
+    }
+    
+    .midPageRight {
+      margin-top: 40px;
+      width: 100%;
+    }
   }
 
 
@@ -339,6 +550,15 @@ form.searchBar::after {
       display: none;
     }
 
+    .account i, .cart i{
+      display: none;
+    }
+  
+    .logoBar a {
+      color: black;
+      text-decoration: none;
+    }
+
 }
 
 
@@ -347,6 +567,15 @@ form.searchBar::after {
     .topBarContent {
       width: 60vw;
       margin: auto;
+  }
+
+  .account i, .cart i{
+    display: none;
+  }
+
+  .logoBar a {
+    color: black;
+    text-decoration: none;
   }
 
   .page {
